<resources>
    <string name="app_name">My Application</string>

    <string name="height_label">身高</string>
    <string name="weight_label">体重</string>
    <string name="bml_label">计算BML</string>

    <string name="reset_label">reset</string>
    <string name="teama_name">Team A</string>
    <string name="teama_score">0</string>
    <string name="teamb_score">0</string>
    <string name="btn3_lable">+3 points</string>
    <string name="btn2_lable">+2 points</string>
    <string name="btn1_lable">+1 points</string>
    <string name="court_label">CourtCounter</string>
    <string name="teamb_name">Team B</string>
    <string name="free">FREE THROW</string>

    <string name="rmb_show">Hello</string>
    <string name="rmb_inp_tip">Input RMB</string>
    <string name="btn_dollar_label">dollar</string>
    <string name="btn_euro_label">euro</string>
    <string name="btn_won_label">won</string>

    <string name="btn_deal">计算BML</string>
    <string name="btn_height">身高</string>
    <string name="btn_weight">体重</string>
    <string name="bml"> </string>

    <string name="save_dabel">SAVE</string>
    <string name="d_lable">INPUT</string>
    <string name="d_config">GONFIG</string>

    <string name="result_label">result</string>
    <string name="Button">Button</string>

    <string name="rate">中国银行外汇牌价</string>

    <string name="TextView_label">TextView</string>

    <string name="Hello_label">Hello</string>
    <string name="input_label">8200.74</string>
    <string name="money_lalel">欧元</string>
    <string name="label">计算</string>

    <string name="u1_label">第一个按钮</string>
    <string name="u2_label">第二个按钮</string>
    <string name="u3_label">第三个按钮</string>
    <string name="u4_label">第四个按钮</string>
    <string name="u5_label">第五个按钮</string>

    <string name="u6_label">请输入信息</string>
    <string name="u7_label"> </string>
    <string name="u8_label">确定</string>
    <string name="u9_label">取消</string>

    <string name="u10_label">第一个按钮</string>
    <string name="u11_label">第二个按钮</string>
    <string name="u12_label">第三个按钮</string>
    <string name="u13_label">第四个按钮</string>
    <string name="u14_label">第五个按钮</string>

    <string name="u15_label">hello</string>
    <string name="u16_label">单击</string>

    <string name="u17_label">这里可以输入文字</string>
    <string name="u18_label">获取EditView的值</string>

    <string name="plain_label">Plain</string>
    <string name="serif_label">Serif</string>
    <string name="bold_label">Bold</string>
    <string name="italic_label">Italic</string>
    <string name="getView_label">获取CheckBox的值</string>

    <string name="man_label">男</string>
    <string name="women_label">女</string>
    <string name="getView1_label">获取性别</string>
    <string name="sex_label">请选择性别</string>

    <string name="data_label">No Data</string>

    <string name="bt6_label">清单</string>
    <string name="bt7_label">专注</string>
    <string name="bt8_label">我的</string>

    <string name="bt9_label">汇率列表</string>
    <string name="bt10_label">加载中，请稍候...</string>
    <string name="bt11_label">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
