<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/text_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/plain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plain_label"/>

    <CheckBox
        android:id="@+id/serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serif_label"/>

    <CheckBox
        android:id="@+id/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bold_label"/>

    <CheckBox
        android:id="@+id/italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italic_label"/>

    <Button
        android:id="@+id/getView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getView_label"
        android:onClick="onClick_check"/>

</LinearLayout>