<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/team1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/teama_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/score1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:layout_marginBottom="24sp"
        android:gravity="center"
        android:text="@string/teama_score"
        android:textSize="75sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="onClick1"
        android:text="@string/btn3_lable"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="onClick1"
        android:text="@string/btn2_lable"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="onClick1"
        android:text="@string/btn1_lable"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_label"
        android:layout_gravity="center"
        android:onClick="onClick_RESET"
        android:layout_marginTop="200dp"/>

</LinearLayout>