<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/u6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/u6_label"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/u7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/u7_label"
        android:inputType="text"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/u6"/>

    <Button
        android:id="@+id/u8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/u7"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/u8_label"/>

    <Button
        android:id="@+id/u9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/u8"
        android:layout_toLeftOf="@id/u8"
        android:text="@string/u9_label"/>


</RelativeLayout>