<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Rate2Activity">


    <Button
        android:id="@+id/Hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hello_label"
        android:gravity="fill"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/money_lalel"
        android:textSize="48sp"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_label"
        android:textSize="24sp"
        android:layout_marginBottom="24sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textSize="24sp"
        android:onClick="onClick_rmb"/>


</LinearLayout>