<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/u19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/u15_label"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/u17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/u17_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/u18_label"
        android:onClick="onClick_edit"/>

</LinearLayout>