<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Score1Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/court"
        android:text="@string/court_label"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teama_name"
                android:textSize="25sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/teama_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teama_score"
                android:textSize="40sp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/teama_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn3_lable"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_a"/>

            <Button
                android:id="@+id/teama_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn2_lable"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_a"/>

            <Button
                android:id="@+id/teama_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_a"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamb_name"
                android:textSize="25sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/teamb_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamb_score"
                android:textSize="40sp"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/teamb_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn3_lable"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_b"/>

            <Button
                android:id="@+id/teamb_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn2_lable"
                android:textAllCaps="true"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_b"/>

            <Button
                android:id="@+id/teamb_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:layout_marginBottom="16dp"
                android:onClick="onClick_b"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_label"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:onClick="onClick_RESET1"
        />




</LinearLayout>