<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".BML_Activity">

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:hint="@string/btn_height"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal"
        android:hint="@string/btn_weight"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/bml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_deal"/>

    <TextView
        android:id="@+id/bml_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>